--- a/iletisim.html
+++ b/iletisim.html
@@ -1059,7 +1059,7 @@
         <a href="portfolyo-TR.html">Portfolyo</a>
         <a href="iletisim.html">iletişim</a>
         
-        <div class="language-switcher">
+         <div class="language-switcher">
           <div class="current-lang" onclick="toggleLanguageOptions()">
             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <circle cx="12" cy="12" r="10"/>
@@ -1075,7 +1075,7 @@
             <a href="contact.html" class="lang-option">
               <span>English</span>
             </a>
-            <a href="contact-AR" class="lang-option">
+            <a href="contact-AR.html" class="lang-option">
               <span>العربية</span>
             </a>
           </div>
@@ -1083,6 +1083,7 @@
       </div>
     </nav>
   </header>
+
 
   <h1 class="contact-header">&#x130;LET&#x130;&#x15e;&#x130;M</h1>
   
