--- a/hizmetler.html
+++ b/hizmetler.html
@@ -1075,7 +1075,7 @@
         <span></span>
       </div>
       <div class="nav-links">
-        <a href="anasayfa.html</a>
+        <a href="anasayfa.html">Ana Sayfa</a>
         <a href="hizmetler.html">Hizmetler</a>
         <a href="portfolyo-TR">Portfolyo</a>
         <a href="iletisim.html">iletişim</a>
