--- a/portfolyo-TR.html
+++ b/portfolyo-TR.html
@@ -1248,13 +1248,13 @@
             <span>TR</span>
           </div>
           <div class="lang-options">
-            <a href=portfolyo.html" class="lang-option">
+            <a href="hizmetler.html" class="lang-option">
               <span>Türkçe</span>
             </a>
-            <a href="portfolio.html" class="lang-option">
+            <a href="services.html" class="lang-option">
               <span>English</span>
             </a>
-            <a href="portfolio-AR" class="lang-option">
+            <a href="services-AR" class="lang-option">
               <span>العربية</span>
             </a>
           </div>
@@ -1262,7 +1262,6 @@
       </div>
     </nav>
   </header>
-
   <h1 class="portfolio-header">PORTFOLYO</h1>
 
   <div class="portfolio-slider">
