--- a/anasayfa.html
+++ b/anasayfa.html
@@ -1,7 +1,7 @@
 <html><head><base href="enjoyturk.com">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>EnjoyTurk - Dijital Reklam Ajans&#x131;</title>
+  <title>EnjoyTurk - Dijital Reklam Ajansı;</title>
   <style>
     :root {
       --primary: #2c3e50;  
