--- a/hizmetler.html
+++ b/hizmetler.html
@@ -1077,7 +1077,7 @@
       <div class="nav-links">
         <a href="anasayfa.html">Ana Sayfa</a>
         <a href="hizmetler.html">Hizmetler</a>
-        <a href="portfolyo-TR">Portfolyo</a>
+        <a href="portfolyo-TR.html">Portfolyo</a>
         <a href="iletisim.html">iletişim</a>
         
         <div class="language-switcher">
@@ -1096,7 +1096,7 @@
             <a href="services.html" class="lang-option">
               <span>English</span>
             </a>
-            <a href="services-AR" class="lang-option">
+            <a href="services-AR.html" class="lang-option">
               <span>العربية</span>
             </a>
           </div>
@@ -1697,6 +1697,38 @@
           'Kartvizit ve Broşür Tasarımı': {
             title: 'Kartvizit ve Broşür Tasarımı',
             description: 'Kurumsal kimliğinize uygun basılı materyal tasarımları yapıyoruz.'
+          },
+          'QR Kod Menü Tasarımı': {
+            title: 'QR Kod Menü Tasarımı',
+            description: 'Kurumsal kimliğinize uygun basılı qr menü tasarımları yapıyoruz.'
+          },
+          'Menü Yönetimi Sistemi': {
+            title: 'Menü Yönetimi Sistemi',
+            description: 'Kurumsal kimliğinize uygun menülerin yönetimini yapıyoruz.'
+          },
+          'Müşteri Dijital Deneyimi': {
+            title: 'Müşteri Dijital Deneyimi',
+            description: 'Müşterilerinizin dijitali sizinle deneyimlemesine olanak sağlıyoruz.'
+          },
+          'NFC Teknolojisi': {
+            title: 'NFC Teknolojisi',
+            description: 'Kurumsal kimliğinize uygun NFC uyumlu basılı materyal tasarımları yapıyoruz.'
+          },
+          'Dijital Kartvizit': {
+            title: 'Dijital Kartvizit',
+            description: 'Kurumsal kimliğinizi dijitale taşıyoruz.'
+          },
+          'İş Süreçleri Dijitalleştirme': {
+            title: 'İş Süreçleri Dijitalleştirme',
+            description: 'İş süreçlerinizi dijital ile birleştirip süreci kolaylaştırıyoruz.'
+          },
+          'Verimlilik Artırma': {
+            title: 'Verimlilik Artırma',
+            description: 'Çabalarınızın ve finansmanınızın doğru ilerlemesini sağlıyoruz.'
+          },
+          'Dijital Çağa Hazırlık': {
+            title: 'Dijital Çağa Hazırlık',
+            description: 'Değişen çağa ayak uydurmanızı sağlıyoruz.'
           }
         };
 
