--- a/main.html
+++ b/main.html
@@ -1031,7 +1031,7 @@
             <a href="main.html" class="lang-option">
               <span>English</span>
             </a>
-            <a href="main-AR" class="lang-option">
+            <a href="main-AR.html" class="lang-option">
               <span>العربية</span>
             </a>
           </div>
