--- a/services-AR.html
+++ b/services-AR.html
@@ -26,7 +26,7 @@
       background-attachment: fixed;
       background-size: cover;
       color: var(--light);
-      direction: rtl;
+
       text-align: right;
     }
 
@@ -62,7 +62,6 @@
       display: flex;
       gap: 2rem;
       align-items: center;
-      flex-direction: row-reverse;
     }
 
     .nav-links a {
@@ -781,7 +780,6 @@
       border: 1px solid rgba(0, 242, 195, 0.1);
       cursor: pointer;
       transition: all 0.3s ease;
-      flex-direction: row-reverse;
     }
 
     .feature-item:hover {
@@ -1100,7 +1098,7 @@
               <path d="M2 12h20"/>
               <path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"/>
             </svg>
-            <span>العربية</span>
+            <span>AR</span>
           </div>
           <div class="lang-options">
             <a href="hizmetler.html" class="lang-option">
